--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/ChechiB/exercise-server#readme",
   "dependencies": {
+    "@hapi/hapi": "^20.1.2",
+    "axios": "^0.21.1",
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "joi": "^17.4.0",
     "nodemon": "^2.0.7",
     "winston": "^3.3.3"
   }
