--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "exercise-server",
   "version": "1.0.0",
   "description": "MeLi exercise",
-  "main": "server.js",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "nodemon bin/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && node ./src/bin/server.js",
+    "dev": "ts-node-dev --respawn --pretty --transpile-only ./src/bin/server.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -24,8 +26,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "joi": "^17.4.0",
     "nodemon": "^2.0.7",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.37",
+    "joi-to-typescript": "^1.11.0",
+    "ts-node": "^9.1.1",
+    "tslint": "^6.1.3"
   }
 }
